# Brown-Help

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md
.github/workflows/: release-vst3.yml  update-readme-screenshot.yml
Source/: BrownCurveBalancer.cpp  BrownCurveBalancer.h  BrownHelpEditor.cpp  BrownHelpEditor.h  BrownHelpProcessor.cpp  BrownHelpProcessor.h  BrownHelpUiComponents.cpp  BrownHelpUiComponents.h  ParameterFormatting.h  Parameters.h  UiStyle.h
Tests/: BrownCurveBalancerTests.cpp
Tools/: RenderPluginUi.cpp  update_readme_screenshot.py
